gen/v25.3/rpk/rpk-redpanda-tune.adoc
= rpk redpanda tune
:description: rpk redpanda tune

Sets the OS parameters to tune system performance.

Available tuners:

  - all.
  - aio_events
  - ballast_file
  - clocksource
  - coredump
  - cpu
  - disk_irq
  - disk_nomerges
  - disk_scheduler
  - disk_write_cache
  - fstrim
  - net
  - swappiness
  - transparent_hugepages

To learn more about a tuner, run 'rpk redpanda tune help <tuner name>'.

== Usage

[,bash]
----
rpk redpanda tune [list of elements to tune] [flags]
  rpk redpanda tune [command]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--cpu-set |string |Set of CPUs for tuners to use in cpuset(7) format; if not specified, tuners will use all available CPUs (default "all").

|-r, --dirs |strings |List of *data* directories or places to store data (e.g. /var/vectorized/redpanda/); usually your XFS filesystem on an NVMe SSD device.

|-d, --disks |strings |Lists of devices to tune f.e. 'sda1'.

|-h, --help |- |Help for tune.

|-m, --mode |string |Operation Mode: one of: [sq, sq_split, mq].

|-n, --nic |strings |Network Interface Controllers to tune.

|--node-tuner-state-path |string |Alternative path to write the tuner state file to (default: /var/run/redpanda_node_tuner_state.yaml).

|--output-script |string |If a filename is provided, it will generate a tuning file that can later be used to tune the system.

|--reboot-allowed |- |Allow tuners to tune boot parameters and request system reboot.

|--timeout |duration |The maximum time to wait for the tune processes to complete (e.g. 300ms, 1.5s, 2h45m) (default 10s).

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===